initial commit - gradio works

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-__pycache__
 .DS_Store
+
+cleansd
+MimicBrush
+
+**/__pycache__/
+depthanything/torchhub/facebookresearch_dinov2_main/dinov2/layers/__pycache__
